Implement add likes in post endpoint
